@@ -1,3 +1,12 @@
+2008-09-22  David Hyatt  <hyatt@apple.com>
+
+        Layout test for double click scrollbar bug.
+
+        Reviewed by Sam Weinig
+
+        * fast/events/scrollbar-double-click-expected.txt: Added.
+        * fast/events/scrollbar-double-click.html: Added.
+
 2008-09-22  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Sam Weinig.
